fixes services mobile alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -82,6 +82,7 @@ body {
 
 .services {
     background-color: rgba(75, 120, 169, 0.1);
+    margin: 0 auto;
 }
 
 #services, 
